--- a/Laptop_Price_Prediction.ipynb
+++ b/Laptop_Price_Prediction.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "ZYftudBO6wxf"
       },
@@ -26,14 +26,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 562
         },
         "id": "Ufz-Na_m7CcM",
-        "outputId": "9440eded-824f-48d9-a081-b40e74f06a8d"
+        "outputId": "416243b4-4848-410d-d790-168de36dae26"
       },
       "outputs": [
         {
@@ -96,7 +96,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a28e3f32-0f2e-4dc2-979f-c1a79d252f40\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a8868974-af99-4530-aecc-6f34903afacb\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -314,7 +314,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a28e3f32-0f2e-4dc2-979f-c1a79d252f40')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a8868974-af99-4530-aecc-6f34903afacb')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -366,12 +366,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a28e3f32-0f2e-4dc2-979f-c1a79d252f40 button.colab-df-convert');\n",
+              "        document.querySelector('#df-a8868974-af99-4530-aecc-6f34903afacb button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a28e3f32-0f2e-4dc2-979f-c1a79d252f40');\n",
+              "        const element = document.querySelector('#df-a8868974-af99-4530-aecc-6f34903afacb');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -391,8 +391,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-743386fe-a7a9-4641-917d-af5582f2332c\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-743386fe-a7a9-4641-917d-af5582f2332c')\"\n",
+              "<div id=\"df-87fd3dd3-5923-474e-986f-cdf98cc764c1\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-87fd3dd3-5923-474e-986f-cdf98cc764c1')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -511,14 +511,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-743386fe-a7a9-4641-917d-af5582f2332c button');\n",
+              "        document.querySelector('#df-87fd3dd3-5923-474e-986f-cdf98cc764c1 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_cc4bec16-89ad-4ba9-b0be-fe3579a7fccb\">\n",
+              "  <div id=\"id_e78bcfbf-b123-4229-b98d-e076c53661ff\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -562,7 +562,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_cc4bec16-89ad-4ba9-b0be-fe3579a7fccb button.colab-df-generate');\n",
+              "        document.querySelector('#id_e78bcfbf-b123-4229-b98d-e076c53661ff button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -583,11 +583,12 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 10
         }
       ],
       "source": [
-        "df=pd.read_csv(\"/content/laptop_price.csv\",encoding='latin')\n",
+        "df = pd.read_csv(\"https://github.com/levi-2003/Project---Laptop-Price-Prediction/raw/main/laptop_price.csv\", encoding='latin')\n",
+        "\n",
         "df"
       ]
     },
